# Face_Recogination

./: README.md  app.py  attendance.csv  attendance.py  face_utils.py  main.py  pyproject.toml  replit.nix
static/css/: style.css
static/js/: camera.js  register.js
templates/: base.html  index.html  register.html  view_attendance.html
