[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Face verification attendance system using Flask and OpenCV"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "numpy>=2.2.3",
    "opencv-python>=4.11.0.86",
    "psycopg2-binary>=2.9.10",
]
